# rust-des

./: .gitignore  Cargo.toml  LICENSE  README
examples/: simple_block_example.rs  simple_cbc_example.rs  simple_ecb_example.rs
src/: des.rs  lib.rs  main.rs
