[package]
name = "my_des"
description = "Implementation of the DES algorithm (FIPS Publication 46-3)."
version = "0.1.0"
authors = ["Christopher Strecker <chris@foldl.de>"]
edition = "2018"
readme = "README"
license = "MIT"
publish = false

[dependencies]
clap = "2.33.0"
md5 = "0.6.1"
num_cpus = "1.0"
rand = "0.7.0"

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
